--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ currency-service.url=http://default.in28minutes.com
 currency-service.username=defaultusername
 currency-service.key=defaultkey
 
+management.endpoints.web.exposure.include=*
